<resources>
    <string name="app_name">SPEED CALCULATOR</string>
    <string name="clear">CLEAR</string>
    <string name="calculate">CALCULATE</string>
    <string name="average_speed_km_h">Average speed (km/h)</string>
    <string name="enter_time_second">Enter time (second)</string>
    <string name="enter_distance_meter">Enter distance (meter)</string>
    <string name="timemustthanzero">Time must be greater than zero</string>
    <string name="distanceandtime">Distance and time are required</string>
    <string name="overlimit">Speed is over limit!</string>
</resources>