<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1000:625"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/speed_meter" />

    <TextView
        android:id="@+id/title"
        android:layout_width="289dp"
        android:layout_height="68dp"
        android:gravity="center"
        android:text="SPEED CALCULATE"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="@+id/distanceSpace"
        app:layout_constraintTop_toBottomOf="@+id/timeSpace" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="@+id/calculate_button"
        app:layout_constraintStart_toStartOf="@+id/distanceSpace"
        app:layout_constraintTop_toTopOf="@+id/calculate_button" />

    <TextView
        android:id="@+id/textShow"
        android:layout_width="278dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:text="@string/average_speed_km_h"
        android:textColor="#FF0000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/valueShow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear_button"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/timeSpace"
        android:layout_width="222dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/enter_time_second"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distanceSpace" />

    <TextView
        android:id="@+id/valueShow"
        android:layout_width="216dp"
        android:layout_height="37dp"
        android:background="#BCBCBC"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481" />

    <EditText
        android:id="@+id/distanceSpace"
        android:layout_width="222dp"
        android:layout_height="34dp"
        android:layout_marginTop="4dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/enter_distance_meter"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/timeSpace"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/timeSpace"
        app:layout_constraintTop_toBottomOf="@+id/title" />

</androidx.constraintlayout.widget.ConstraintLayout>